--- a/Backend/ielts-simulator/package.json
+++ b/Backend/ielts-simulator/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/language": "^6.5.0",
     "@google-cloud/speech": "^6.7.0",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
     "openai": "^4.79.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pdf": "^9.2.1",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
