--- a/Backend/ielts-simulator/package.json
+++ b/Backend/ielts-simulator/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@google-cloud/language": "^6.5.0",
     "@google-cloud/speech": "^6.7.0",
+    "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
