--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,1 +1,8 @@
-{}
+{
+  "dependencies": {
+    "@google-cloud/speech": "^6.7.0",
+    "axios": "^1.7.9",
+    "express": "^4.21.2",
+    "ws": "^8.18.0"
+  }
+}
